# fundi

./: CHANGELOG.md  DOCUMENTATION.md  LICENSE.md  Makefile  README.md  pyproject.toml
tests/: __init__.py
tests/core/ai/: test_config.py  test_context.py  test_fundi.py  test_governor.py  test_guard.py  test_mock.py  test_toolresult.py  test_utils.py  test_wasm.py  tools.py
tests/pact/ai/: test_pysnippet.py
tokeo/core/ai/: GOVERNORS.md  __init__.py  agent.py  conductor.py  context.py  data.py  exc.py  governor.py  guard.py  linter.py  provider.py  sandbox.py  tool.py  transformer.py  utils.py
tokeo/core/ai/conductors/: CONDUCTORS.md  __init__.py  exc.py
tokeo/core/ai/config/: CONFIG.md  __init__.py  governors.py  guards.py  linter.py  profiles.py  providers.py  sandboxes.py  tools.py
tokeo/core/ai/guards/: GUARDS.md  __init__.py  exc.py
tokeo/core/ai/guards/audit/: __init__.py  base.py  exc.py  trace.py
tokeo/core/ai/guards/confirm/: __init__.py  base.py  exc.py
tokeo/core/ai/guards/policy/: __init__.py  abort.py  base.py  deny.py  exc.py  tool.py
tokeo/core/ai/guards/redact/: __init__.py  base.py  exc.py  regex.py
tokeo/core/ai/providers/: __init__.py  mock.py  oai_compat.py
tokeo/core/ai/sandboxes/: WASM.md  __init__.py  in_process.py  runner.py  subprocess.py  wasm.py
tokeo/core/ai/tools/: __init__.py  python_trusted_exec.py  python_untrusted_exec.py
tokeo/core/ai/transformers/: TRANSFORMERS.md  __init__.py  exc.py
tokeo/ext/: ai.py
tokeo/pact/ai/: __init__.py  data.py  pysnippet.py  tool.py
tokeo/templates/pdoc/html/: config.mako
(+10 files in other folders)
