[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokeo-fundi"
dynamic = ["version"]  # Declare version as dynamic
description = "Tokeo Fundi AI Extension for Tokeo CLI"
readme = "README.md"
authors = [
    {name = "Tom Freudenberg", email = "th.freudenberg@gmail.com"}
]
license = {file = "LICENSE.md"}
urls = {"Homepage" = "https://github.com/tokeo/fundi"}
requires-python = ">=3.10"

dependencies = [
    "tokeo >= 1.3.0, < 2.0.0",
    # packages necessary to run fundi
    "prompt_toolkit",
    "httpx",
    "numpy",
    "numba",
    "torch",
    "wasmtime",
]

[project.optional-dependencies]
dev = [
    "pip-tools>=7.0.0",
    "pytest>=8.5.0",
    "pytest-cov>=6.0.0",
    "coverage>=7.10.0",
    "twine>=6.0.0",
    "setuptools>=75.0.0",
    "wheel>=0.40.0",
    "pyink>=25.0.0",
    "flake8>=7.0.0",
]

[tool.setuptools]
packages = {find = {namespaces = true, include = ["tokeo", "tokeo.*"], exclude = ["tokeo.templates", "tokeo.templates.*", "ez_setup", "tests*", "wasm*"]}}
include-package-data = true

[tool.setuptools.package-data]
"tokeo.core.ai" = ["**/*.md"]

[tool.setuptools.dynamic]
version = {attr = "tokeo.core.ai.fundi.get_version"}
